# ben-api-other-integrations

./: README.md
Assembly/: README.md  background_removal.asm  background_removal_arm64.S
Bash-Shell/: README.md  background_removal.sh
Brainfuck/: README.md  build.sh  run.sh
Brainfuck/scripts/: genbf.py  send_with_bf.sh
C/: README.md  background_removal.c
C++/: README.md  background_removal.cpp
CS/: BENClient.cs  Program.cs  README.md
Docker/: README.md
Elixir/: background_removal.exs  readme
Erlang/: README.md  ben_bg.erl  ben_bg_cli.escript
Flutter/: README.md  ben_client.dart  main.dart  pubspec.yaml  save_result_nonweb.dart  save_result_web.dart
GO/: README.md  main.go
Haskell/: Haskell.cabal  README.md
Haskell/app/: Main.hs
Java/: BenBackgroundRemoval.java  README.md
JavaScript/: README.md  backgroundRemoval.js
Julia/: background_removal.jl  readme
Kotlin/: MainActivity.kt  README.md  build.gradle.kts
Lua/: README.md  background_removal.lua
MATLAB/: README.md  backgroundremoval.m
Objective-C/: BENObjectiveC.m  README.md
PHP/: README.md  background_removal.php
Perl/: README.md  background_removal.pl
PowerShell/: README.md  background_removal.ps1
Python/: README.md  background_removal.py
Ruby/: README.md  background_removal.rb
Rust/: Cargo.toml  README.md  readme
Rust/src/: main.rs
Scala/: BackgroundRemoval.scala  README.md
Scratch/: README.md
Swift/: BENClient.swift  BEN_IntegrationApp.swift  ContentView.swift  README.md
TypeScript/: README.md  backgroundRemoval.ts
Zig/: README.md  background_removal.zig
(+3 files in other folders)
